--- a/README
+++ b/README
@@ -1,18 +1,15 @@
 This is Boa, a high performance web server for Unix-alike computers,
-covered by the Gnu General Public License.  This is version 0.92r,
-released 11 February, 2000.  It is well tested and appears to be of
-production quality, given some limitations spelled out in the
-documentation.  There is a new production branch of Boa, the 0.94
-series, that should be used instead of this one for most purposes.
-See the www.boa.org web site for more information.
+covered by the Gnu General Public License.  This is version 0.94,
+released January 2000.  It is well tested and appears to be of
+at least "gamma" quality.
 
-Boa was created by Paul Phillips <psp@well.com>.  It is now being
-maintained and enhanced by Larry Doolittle <ldoolitt@jlab.org>
-and Jon Nelson <nels0988@tc.umn.edu>.
+Boa was created in 1991 by Paul Phillips <paulp@go2net.com>.  It is now being
+maintained and enhanced by Larry Doolittle <ldoolitt@boa.org>
+and Jon Nelson <jnelson@boa.org>.
 
 For more information (including installation instructions) examine
-the files docs/*.txt, point your web browser to docs/readme.html, or
-visit the Boa homepage at
+the file docs/boa.txt or docs/boa.dvi, point your web browser to docs/boa.html,
+or visit the Boa homepage at
 
         http://www.boa.org/
 
